// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`destroys everything on exit 1`] = `
" INFO   Logux server is listening at 1970-01-01 00:00:00
        PID:          21384
        Logux server: 0.0.0
        Environment:  test
        Node ID:      server:FnXaqDxY
        Subprotocol:  1.0.0
        Supports:     1.x
        Health check: http://127.0.0.1:31338/status
        Listen:       ws://127.0.0.1:2000/

 INFO   Shutting down Logux server at 1970-01-01 00:00:00

 Custom destroy task finished
"
`;

exports[`disables colors for constructor errors 1`] = `
" FATAL  Missed supports option in server constructor at 1970-01-01 00:00:00
        Check server constructor and Logux Server documentation

"
`;

exports[`shows help 1`] = `
"Options:
  --host, -h          Host to bind server.                              [string]
  --port, -p          Port to bind server                               [number]
  --key               Path to SSL key                                   [string]
  --cert              Path to SSL certificate                           [string]
  --reporter, -r      Reporter type          [string] [choices: \\"human\\", \\"json\\"]
  --backend           Backend to process actions and authentication     [string]
  --control-host      Host to bind HTTP server to control Logux server  [string]
  --control-port      Port to bind HTTP server to control Logux server  [number]
  --control-password  Password to control Logux server                  [string]
  --redis             URL to Redis for Logux Server Pro scaling         [string]
  --help              Show help                                        [boolean]

Examples:
  options.js --port 31337 --host 127.0.0.1
  LOGUX_PORT=1337 options.js

Environment variables:
  LOGUX_HOST, LOGUX_PORT, LOGUX_KEY, LOGUX_CERT, LOGUX_REPORTER, LOGUX_REDIS
  LOGUX_CONTROL_HOST, LOGUX_CONTROL_PORT, LOGUX_CONTROL_PASSWORD, LOGUX_BACKEND
"
`;

exports[`shows help about missed option 1`] = `
" FATAL  Missed supports option in server constructor at 1970-01-01 00:00:00
        Check server constructor and Logux Server documentation

"
`;

exports[`shows help about missed password 1`] = `
" FATAL  backend requires controlPassword option at 1970-01-01 00:00:00
        Call npx nanoid-cli and set result as controlPassword or
        LOGUX_CONTROL_PASSWORD environment variable

"
`;

exports[`shows help about port in use 1`] = `
" FATAL  Port 2001 already in use at 1970-01-01 00:00:00
        Another Logux server or other app already running on this port.
        Probably you haven’t stopped server from other project or previous
        version of this server was not killed.
        
        $ su - root
        # netstat -nlp | grep 2001
        Proto   Local Address   State    PID/Program name
        tcp     0.0.0.0:2001    LISTEN   777/node
        # sudo kill -9 777

 INFO   Shutting down Logux server at 1970-01-01 00:00:00

"
`;

exports[`shows help about privileged port 1`] = `
" FATAL  You are not allowed to run server on port 1000 at 1970-01-01 00:00:00
        Non-privileged users can't start a listening socket on ports below 1024.
        Try to change user or take another port.
        
        $ su - <username>
        $ npm start -p 1000

 INFO   Shutting down Logux server at 1970-01-01 00:00:00

"
`;

exports[`shows help about unknown option 1`] = `
" FATAL  Missed supports option in server constructor at 1970-01-01 00:00:00
        Check server constructor and Logux Server documentation

"
`;

exports[`shows uncatch errors 1`] = `
" FATAL  Test Error at 1970-01-01 00:00:00
        fake stacktrace

 INFO   Shutting down Logux server at 1970-01-01 00:00:00

Fatal event: Test Error
"
`;

exports[`shows uncatch rejects 1`] = `
" FATAL  Test Error at 1970-01-01 00:00:00
        fake stacktrace

 INFO   Shutting down Logux server at 1970-01-01 00:00:00

Fatal event: Test Error
"
`;

exports[`uses .env cwd 1`] = `
" INFO   Logux server is listening at 1970-01-01 00:00:00
        PID:          21384
        Logux server: 0.0.0
        Environment:  test
        Node ID:      server:FnXaqDxY
        Subprotocol:  1.0.0
        Supports:     1.x
        Health check: http://127.0.0.1:31338/status
        Listen:       ws://127.0.0.1:3334/

 INFO   Shutting down Logux server at 1970-01-01 00:00:00

"
`;

exports[`uses .env from root 1`] = `
" INFO   Logux server is listening at 1970-01-01 00:00:00
        PID:          21384
        Logux server: 0.0.0
        Environment:  test
        Node ID:      server:FnXaqDxY
        Subprotocol:  1.0.0
        Supports:     1.x
        Health check: http://127.0.0.1:31338/status
        Listen:       ws://127.0.0.1:3334/

 INFO   Shutting down Logux server at 1970-01-01 00:00:00

"
`;

exports[`uses environment variables for config 1`] = `
"{\\"name\\":\\"logux-server\\",\\"hostname\\":\\"localhost\\",\\"pid\\":21384,\\"level\\":30,\\"loguxServer\\":\\"0.0.0\\",\\"environment\\":\\"test\\",\\"nodeId\\":\\"server:FnXaqDxY\\",\\"subprotocol\\":\\"1.0.0\\",\\"supports\\":\\"1.x\\",\\"listen\\":\\"ws://127.0.0.1:31337/\\",\\"healthCheck\\":\\"http://127.0.0.1:31338/status\\",\\"msg\\":\\"Logux server is listening\\",\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"v\\":0}
{\\"name\\":\\"logux-server\\",\\"hostname\\":\\"localhost\\",\\"pid\\":21384,\\"level\\":30,\\"msg\\":\\"Shutting down Logux server\\",\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"v\\":0}
"
`;

exports[`uses reporter param 1`] = `
"{\\"name\\":\\"logux-server\\",\\"hostname\\":\\"localhost\\",\\"pid\\":21384,\\"level\\":30,\\"loguxServer\\":\\"0.0.0\\",\\"environment\\":\\"test\\",\\"nodeId\\":\\"server:FnXaqDxY\\",\\"subprotocol\\":\\"1.0.0\\",\\"supports\\":\\"1.x\\",\\"listen\\":\\"ws://127.0.0.1:31337/\\",\\"healthCheck\\":\\"http://127.0.0.1:31338/status\\",\\"msg\\":\\"Logux server is listening\\",\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"v\\":0}
{\\"name\\":\\"logux-server\\",\\"hostname\\":\\"localhost\\",\\"pid\\":21384,\\"level\\":30,\\"msg\\":\\"Shutting down Logux server\\",\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"v\\":0}
"
`;

exports[`uses reporter param for constructor errors 1`] = `
"{\\"name\\":\\"logux-server\\",\\"hostname\\":\\"localhost\\",\\"pid\\":21384,\\"level\\":60,\\"note\\":\\"Check server constructor and Logux Server documentation\\",\\"msg\\":\\"Missed \`supports\` option in server constructor\\",\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"v\\":0}
"
`;

exports[`writes about unbind 1`] = `
" INFO   Shutting down Logux server at 1970-01-01 00:00:00

"
`;

exports[`writes to bunyan log 1`] = `
"{\\"name\\":\\"logux-server\\",\\"hostname\\":\\"localhost\\",\\"pid\\":21384,\\"level\\":30,\\"loguxServer\\":\\"0.0.0\\",\\"environment\\":\\"test\\",\\"nodeId\\":\\"server:FnXaqDxY\\",\\"subprotocol\\":\\"1.0.0\\",\\"supports\\":\\"1.x\\",\\"listen\\":\\"ws://127.0.0.1:2000/\\",\\"healthCheck\\":\\"http://127.0.0.1:31338/status\\",\\"msg\\":\\"Logux server is listening\\",\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"v\\":0}
{\\"name\\":\\"logux-server\\",\\"hostname\\":\\"localhost\\",\\"pid\\":21384,\\"level\\":30,\\"msg\\":\\"Shutting down Logux server\\",\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"v\\":0}
"
`;

exports[`writes to custom bunyan log 1`] = `
"{\\"name\\":\\"logux-server-custom\\",\\"customProp\\":\\"42\\",\\"hostname\\":\\"localhost\\",\\"pid\\":21384,\\"level\\":30,\\"loguxServer\\":\\"0.0.0\\",\\"environment\\":\\"test\\",\\"nodeId\\":\\"server:FnXaqDxY\\",\\"subprotocol\\":\\"1.0.0\\",\\"supports\\":\\"1.x\\",\\"listen\\":\\"ws://127.0.0.1:2000/\\",\\"healthCheck\\":\\"http://127.0.0.1:31338/status\\",\\"msg\\":\\"Logux server is listening\\",\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"v\\":0}
{\\"name\\":\\"logux-server-custom\\",\\"customProp\\":\\"42\\",\\"hostname\\":\\"localhost\\",\\"pid\\":21384,\\"level\\":30,\\"msg\\":\\"Shutting down Logux server\\",\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"v\\":0}
"
`;

exports[`writes using custom reporter 1`] = `
"Event: listen
Details: {\\"controlHost\\":\\"127.0.0.1\\",\\"controlPort\\":31338,\\"loguxServer\\":\\"0.0.0\\",\\"environment\\":\\"test\\",\\"subprotocol\\":\\"1.0.0\\",\\"supports\\":\\"1.x\\",\\"server\\":false,\\"nodeId\\":\\"server:FnXaqDxY\\",\\"notes\\":{},\\"cert\\":false,\\"host\\":\\"127.0.0.1\\",\\"port\\":2000}
Event: destroy
Details: undefined
"
`;
